[gd_scene load_steps=5 format=3 uid="uid://dglny14qs8nha"]

[ext_resource type="Script" path="res://scripts/ui/player_info.gd" id="1_player_info"]
[ext_resource type="Texture2D" uid="uid://cym6r514pxq6v" path="res://texture/ui/player_info.png" id="2_8oy8l"]
[ext_resource type="FontFile" uid="uid://cg1ivxg8ilb2w" path="res://fonts/SourceHanSerifSC-Medium.otf" id="3_284x3"]
[ext_resource type="Texture2D" uid="uid://duylq7jvuhx2i" path="res://texture/ui/waitingframe1.png" id="3_yeyix"]

[node name="PlayerInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_player_info")

[node name="PlayerInfo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1223.0
offset_bottom = 774.0
texture = ExtResource("2_8oy8l")

[node name="Waitingframe1" type="Sprite2D" parent="."]
position = Vector2(612, 527.455)
rotation = -3.14159
scale = Vector2(1, 0.637068)
texture = ExtResource("3_yeyix")

[node name="OperatorPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 268.0
offset_right = 1225.0
offset_bottom = 1456.0
expand_mode = 3
stretch_mode = 5

[node name="PlayerName" type="Label" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 21.0
offset_right = 498.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 40

[node name="Team" type="Label" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 108.0
offset_right = 504.0
offset_bottom = 167.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 40

[node name="Squad" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 200.0
offset_right = 402.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 40

[node name="Relic" type="Label" parent="."]
layout_mode = 0
offset_left = 809.0
offset_top = 200.0
offset_right = 849.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 40

[node name="Operator" type="Label" parent="."]
layout_mode = 2
offset_left = 35.0
offset_top = 698.0
offset_right = 289.0
offset_bottom = 757.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="Slogan" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 312.0
offset_right = 492.0
offset_bottom = 697.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_284x3")
theme_override_font_sizes/font_size = 35

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 40.0
offset_right = 223.0
offset_bottom = 210.0
expand_mode = 1
